--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.89",
     "@clerk/nextjs": "^6.36.2",
     "@creem_io/nextjs": "^0.4.0",
     "@hookform/resolvers": "^3.10.0",
