--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # my project
-/dev_document
+/0-process_doc
 
 # dependencies
 /node_modules
