--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "gray-matter": "^4.0.3",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.454.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
