--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "googleapis": "^169.0.0",
     "gray-matter": "^4.0.3",
     "html-to-image": "^1.11.13",
     "input-otp": "1.4.1",
