--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,21 +9,15 @@
     "orientation": "any",
     "icons": [
         {
-            "src": "/logo.png",
-            "sizes": "192x192",
-            "type": "image/png",
+            "src": "/icon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "/logo.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "/logo.png",
-            "sizes": "192x192",
-            "type": "image/png",
+            "src": "/icon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
             "purpose": "maskable"
         }
     ],
