修改标签位置以及移动端适配问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# /0-Develop_Doc
+# /1-Project_Doc
+
 # dependencies
 /node_modules
 /.pnp
