--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-collapsible": "1.1.2",
     "@radix-ui/react-context-menu": "2.2.4",
     "@radix-ui/react-dialog": "1.1.4",
-    "@radix-ui/react-dropdown-menu": "2.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-hover-card": "1.1.4",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-menubar": "1.1.4",
@@ -54,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "googleapis": "^169.0.0",
     "gray-matter": "^4.0.3",
@@ -62,6 +63,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.454.0",
     "next": "16.0.7",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "openai": "^6.15.0",
     "react": "19.2.0",
@@ -73,6 +75,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tencentcloud-sdk-nodejs-tmt": "^4.1.134",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
