--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/elements": "^0.23.89",
+    "@clerk/localizations": "^3.35.0",
     "@clerk/nextjs": "^6.36.2",
     "@creem_io/nextjs": "^0.4.0",
     "@hookform/resolvers": "^3.10.0",
