--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/elements": "^0.23.89",
     "@clerk/localizations": "^3.35.0",
     "@clerk/nextjs": "^6.36.2",
+    "@clerk/themes": "^2.4.48",
     "@creem_io/nextjs": "^0.4.0",
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.1",
