--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@vitest/coverage-v8": "^4.0.16",
     "jsdom": "^27.3.0",
     "postcss": "^8.5",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5",
