--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# /0-Develop_Doc
-# /1-Project_Doc
+/0-Develop_Doc
+/1-Project_Log
 
 # dependencies
 /node_modules
